namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    app: myapp
    managed-by: jenkins
