ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
   - http:
        paths:
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: todo-app-service
                port:
                  number: 80
          - path: /tictactoe
            pathType: Prefix
            backend:
              service:
                name: tictactoe-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-service
                port:
                  number: 80
